--- a/index.html
+++ b/index.html
@@ -1,147 +1,162 @@
-<html lang="vi">
+<!DOCTYPE html>
+<html>
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>My tradingview</title>
-</head>
+<title>Page Title</title>
 
-<script>
-    var symbol1 = "";
-    $(document).ready(function () {
-        bindEnterEvent();
-        let symbol = getSearchParams("symbol")
-        if (symbol === undefined || symbol === null || symbol.length < 5) {
-        } else {
-            symbol1 = symbol
-            bind(symbol)
-        }
-    })
-
-    function getSearchParams(k) {
-        var p = {};
-        location.search.replace(/[?&]+([^=&]+)=([^&]*)/gi, function (s, k, v) {
-            p[k] = v
-        })
-        return k ? p[k] : p;
-    }
-
-    function bindEnterEvent() {
-        $(document).keyup(function (e) {
-            if (e.key === "Escape") { // escape key maps to keycode `27`
-                var modal = document.getElementById("modal_view");
-                modal.style.display = "none";
-                $("#modal_view").empty();
-            }
-        });
-
-        $('#txt_coin').bind("enterKey", function (e) {
-            let coin = $('#txt_coin').val().toUpperCase() + 'USDT';
-            if (!coin.endsWith("USDT")) {
-                coin += "USDT"
-            }
-            symbol1 = coin
-            bind(coin)
-        });
-        $('#txt_coin').keyup(function (e) {
-            if (e.keyCode === 13) {
-                $(this).trigger("enterKey");
-            }
-        });
-    }
-
-    function bind(coin) {
-        $("#tradingview_15").empty();
-        $("#tradingview_30").empty();
-        $("#tradingview_60").empty();
-        $("#tradingview_240").empty();
-
-        createTradingview(coin, 5);
-        createTradingview(coin, 15);
-        createTradingview(coin, 30);
-        createTradingview(coin, 60);
-    }
-
-    function createTradingview(coin, interval) {
-        let rsi_cci = '<iframe id="tradingview_37045" src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_648e4'
-            + '&symbol=BINANCE%3A' + coin
-            + '&interval=' + interval
-            + '&amp;showpopupbutton=1'
-            + '&symboledit=1&saveimage=1&toolbarbg=f1f3f6'
-            + '&studies=IchimokuCloud%40tv-basicstudies&theme=dark'
-            + '&style=1&timezone=Asia%2FHo_Chi_Minh&studies_overrides=%7B%7D&overrides=%7B%7D'
-            + '&enabled_features=%5B%5D&disabled_features=%5B%5D&locale=en&utm_source=&utm_medium=widget_new&utm_campaign=chart'
-            + '&utm_term=BINANCE%3A' + coin + '" style="width: 100%; height: 100%; margin: 0 !important; padding: 0 !important;" frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen=""></iframe>';
-        $("#tradingview_" + interval).html(rsi_cci);
-    }
-
-    function createChart(coin, interval) {
-        var containerId = "tradingview_" + generateId();
-
-        new TradingView.widget(
-            {
-                "width": (screen.width / 2) - 2,
-                "height": (screen.height / 2) - 2,
-                "symbol": "BINANCE:" + coin,
-                "interval": interval.toString(),
-                "timezone": "Asia/Ho_Chi_Minh",
-                "theme": "dark",
-                "style": "1",
-                "locale": "en",
-                "toolbar_bg": "#f1f3f6",
-                "enable_publishing": false,
-                "allow_symbol_change": true,
-                "studies": [
-                    "BB@tv-basicstudies",
-                    "MACD@tv-basicstudies",
-                    "RSI@tv-basicstudies",
-                    "Stochastic@tv-basicstudies"
-                ],
-                "container_id": containerId
-            }
-        );
-    }
-
-    function generateId() {
-        const charset = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-';
-        var chars = [];
-
-        for (var i = 0; i < 7; i++) {
-            chars[i] = charset[Math.floor(Math.random() * charset.length)]
-        }
-
-        return chars.join('');
-    }
-</script>
-<body>
-<input type="text" id="txt_coin"/>
-
-<div class="row">
-    <div class="column" style="background-color:#aaa; padding: 0">
-        <div id="tradingview_5"></div>
-    </div>
-    <div class="column" style="background-color:#bbb; padding: 0">
-        <div id="tradingview_15"></div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="column" style="background-color:#aaa;padding: 0">
-        <div id="tradingview_30"></div>
-    </div>
-    <div class="column" style="background-color:#bbb;padding: 0">
-        <div id="tradingview_60"></div>
-    </div>
-</div>
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-    <!-- Modal content -->
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <p>Some text in the Modal..</p>
-    </div>
+<style>
+.wrapper {
+    display: grid;
+    grid-gap: 0px;
+    grid-template-columns: [col] auto [col] auto [col] auto [col] auto  ;
+    grid-template-rows: [row] auto [row] auto [row] ;
+    background-color: #fff;
+    color: #444;
+  }
   
+  .box {
+    background-color: #444;
+    color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    font-size: 150%;
+
+  }
+
+  .a {
+    grid-column: col / span 2;
+    grid-row: row ;
+  }
+  .b {
+    grid-column: col 3 / span 2 ;
+    grid-row: row ;
+  }
+  
+  .c {
+    grid-column: col / span 2;
+    grid-row: row 2;
+  }
+  .d {
+    grid-column: col 3 / span 2 ;
+    grid-row: row 2;
+  }
+</style>
+</head>
+<body>
+
+<div class="wrapper">
+  <div class="box a">
+    <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_5cae2"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BTC.D/?exchange=CRYPTOCAP" rel="noopener" target="_blank"><span class="blue-text">BTC.D Chart</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "autosize": true,
+  "symbol": "CRYPTOCAP:BTC.D",
+  "interval": "D",
+  "timezone": "Asia/Ho_Chi_Minh",
+  "theme": "dark",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "hide_side_toolbar": false,
+  "studies": [
+    "RSI@tv-basicstudies"
+  ],
+  "container_id": "tradingview_5cae2"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
   </div>
+  <div class="box b"><!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_a1d47"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/USDT.D/?exchange=CRYPTOCAP" rel="noopener" target="_blank"><span class="blue-text">USDT.D Chart</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "autosize": true,
+  "symbol": "CRYPTOCAP:USDT.D",
+  "interval": "D",
+  "timezone": "Asia/Ho_Chi_Minh",
+  "theme": "dark",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "hide_side_toolbar": false,
+  "studies": [
+    "RSI@tv-basicstudies"
+  ],
+  "container_id": "tradingview_a1d47"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END --></div>
+  <div class="box c"><!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_55c5b"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/TOTAL/?exchange=CRYPTOCAP" rel="noopener" target="_blank"><span class="blue-text">TOTAL Chart</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "autosize": true,
+  "symbol": "CRYPTOCAP:TOTAL",
+  "interval": "D",
+  "timezone": "Asia/Ho_Chi_Minh",
+  "theme": "dark",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "hide_side_toolbar": false,
+  "studies": [
+    "RSI@tv-basicstudies"
+  ],
+  "container_id": "tradingview_55c5b"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END --></div>
+  <div class="box d"><!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_69d16"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/TOTAL2/?exchange=CRYPTOCAP" rel="noopener" target="_blank"><span class="blue-text">TOTAL2 Chart</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "autosize": true,
+  "symbol": "CRYPTOCAP:TOTAL2",
+  "interval": "D",
+  "timezone": "Asia/Ho_Chi_Minh",
+  "theme": "dark",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "hide_side_toolbar": false,
+  "studies": [
+    "RSI@tv-basicstudies"
+  ],
+  "container_id": "tradingview_69d16"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END --></div>
+</div>
+
 </body>
 </html>
+
+
