--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     display: grid;
     grid-gap: 0px;
     grid-template-columns: [col] auto [col] auto [col] auto [col] auto  ;
-    grid-template-rows: [row] auto [row] auto [row] ;
+    grid-template-rows: [row] 100% [row] 100% [row] ;
     background-color: #fff;
     color: #444;
   }
@@ -17,7 +17,7 @@
     background-color: #444;
     color: #fff;
     border-radius: 5px;
-    padding: 20px;
+    padding: 0px;
     font-size: 150%;
 
   }
