--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body{
             + '&interval=D'
             + '&amp;showpopupbutton=1'
             + '&symboledit=1&saveimage=1&toolbarbg=f1f3f6'
-            + '&studies=RSI@tv-basicstudies&theme=dark'
+            + '&theme=dark'
             + '&style=1&timezone=Asia%2FHo_Chi_Minh&studies_overrides=%7B%7D&overrides=%7B%7D'
             + '&enabled_features=%5B%5D&disabled_features=%5B%5D&locale=en&utm_source=&utm_medium=widget_new&utm_campaign=chart'
             + '&utm_term=' + coin + '" style="width: 100%; height: 100%; margin: 0 !important; padding: 0 !important;" frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen=""></iframe>';
